--- a/DocumentManagementSystem/Views/Home/SignIn.cshtml
+++ b/DocumentManagementSystem/Views/Home/SignIn.cshtml
@@ -15,6 +15,7 @@
     <meta name="author" content="">
 
     <title>BOZOK BYS</title>
+    <link rel="icon" href="~/image/site/BozokIcon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
@@ -32,9 +33,9 @@
         </h5>
 
         <nav class="my-2 my-md-0 mr-md-3 ">
-            <a class="p-2 text-dark  " href="#">Belge Doğrulama</a>
+            <a class="p-2 text-dark  " href="@Url.Action("Home" , "Home")">Belge Doğrulama</a>
         </nav>
-        <a class="btn btn-outline-primary" href="#">Giriş Yap</a>
+        <a class="btn btn-outline-primary" href="@Url.Action("SignIn" , "Home")">Giriş Yap</a>
     </div>
     <!--Navbar-->
     <!--Body-->
@@ -68,7 +69,7 @@
 
     <!--Body-->
     <!--Footer-->
-    <div class="container">
+    <div class="container ">
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
                 <div class="col-12 col-md">
@@ -78,8 +79,8 @@
                 <div class="col-6 col-md">
                     <h5>Hızlı Linkler</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Belge Doğrulama</a></li>
-                        <li><a class="text-muted" href="#">Giriş Yap</a></li>
+                        <li><a class="text-muted" href="@Url.Action("Home" , "Home")">Belge Doğrulama</a></li>
+                        <li><a class="text-muted" href="@Url.Action("SignIn" , "Home")">Giriş Yap</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md">
@@ -103,17 +104,6 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/vendor/holder.min.js"></script>
-    <script>
-        Holder.addTheme('thumb', {
-            bg: '#55595c',
-            fg: '#eceeef',
-            text: 'Thumbnail'
-        });
-    </script>
+
 </body>
 </html>
