--- a/DocumentManagementSystem/Views/Home/Home.cshtml
+++ b/DocumentManagementSystem/Views/Home/Home.cshtml
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link href="~/Content/pricing.css" rel="stylesheet" />
 
+
+    <script src="https://www.google.com/recaptcha/api.js"></script>
 </head>
 
 <body>
@@ -50,8 +52,11 @@
             {
 
                 @Html.TextBoxFor(x => x.VerificationCode, new { id = "myInput", oninput = "convertToUpperCase()", placeholder = "Belge Kodunu Giriniz", @class = "form-control" })
+                <p class="text-danger m" id="inputError"></p>
 
-                <p class="text-danger m" id="validationError"></p>
+                <div class="g-recaptcha" data-sitekey="6LeTsZslAAAAAIKJenK0ZP832i_B2TIAZjHbiTVL"></div>
+                <p class="text-danger m" id="captchaError"></p>
+
 
                 <button class="btn mt-3 btn-primary btn-block" onclick="codeValidate()">Sorgula</button>
 
@@ -63,10 +68,63 @@
 
 
     @if (Model.isPostMethod)  //true ise post edilmiş demektir
-    { 
-        if (Model.document != null)
+    {
+        if (Model.captchaStatus)
         {
-            if (!Model.document.DocumentStatus) //false
+
+            if (Model.document != null)
+            {
+                if (!Model.document.DocumentStatus) //false
+                {
+                    <!--Olumsuz-->
+                    <div class="container pt-4">
+                        <div class="row">
+                            <div class="col-md-6 offset-md-3">
+                                <div class="alert alert-danger text-center">
+                                    <h5>Böyle bir belge bulunamadı ! <i class="bi bi-x-lg"></i></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Olumsuz-->
+
+                }
+                else //true
+                {
+                    <!--Olumlu-->
+                    <div class="container pt-4">
+                        <div class="row">
+                            <div class="col-md-6 offset-md-3">
+                                <div class="alert alert-success text-center">
+                                    <h5>Doğrulanmış Belge <i class="bi bi-check2-all "></i></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container col-md-10 offset-md-3">
+                        <div class="col-md-10 row ">
+                            <div class="col-md-5">
+                                <ul class="list-group list-group-flush text-center">
+                                    <li class="list-group-item font-weight-bold">Belge Adı :</li>
+                                    <li class="list-group-item font-weight-bold">Belge Sahibi :</li>
+                                    <li class="list-group-item font-weight-bold">Veriliş Tarihi :</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-5">
+                                <ul class="list-group list-group-flush text-center ">
+                                    <li class="list-group-item ">@Model.document.DocumentType.DocumentTypeName</li>
+                                    <li class="list-group-item">@Model.document.Student.StudentName @Model.document.Student.StudentSurname</li>
+                                    <li class="list-group-item">@Model.document.DocumentCreateDate.ToString("g")</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Olumlu-->
+                }
+
+
+            }
+            else //null
             {
                 <!--Olumsuz-->
                 <div class="container pt-4">
@@ -81,57 +139,22 @@
                 <!--Olumsuz-->
 
             }
-            else //true
-            {
-                <!--Olumlu-->
-                <div class="container pt-4">
-                    <div class="row">
-                        <div class="col-md-6 offset-md-3">
-                            <div class="alert alert-success text-center">
-                                <h5>Doğrulanmış Belge <i class="bi bi-check2-all "></i></h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="container col-md-10 offset-md-3">
-                    <div class="col-md-10 row ">
-                        <div class="col-md-5">
-                            <ul class="list-group list-group-flush text-center">
-                                <li class="list-group-item font-weight-bold">Belge Adı :</li>
-                                <li class="list-group-item font-weight-bold">Belge Sahibi :</li>
-                                <li class="list-group-item font-weight-bold">Veriliş Tarihi :</li>
-                            </ul>
-                        </div>
-                        <div class="col-md-5">
-                            <ul class="list-group list-group-flush text-center ">
-                                <li class="list-group-item ">@Model.document.DocumentType.DocumentTypeName</li>
-                                <li class="list-group-item">@Model.document.Student.StudentName @Model.document.Student.StudentSurname</li>
-                                <li class="list-group-item">@Model.document.DocumentCreateDate.ToString("g")</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <!--Olumlu-->
-            }
-
-
         }
-        else //null
+        else
         {
             <!--Olumsuz-->
             <div class="container pt-4">
                 <div class="row">
                     <div class="col-md-6 offset-md-3">
                         <div class="alert alert-danger text-center">
-                            <h5>Böyle bir belge bulunamadı ! <i class="bi bi-x-lg"></i></h5>
+                            <h5>Lütfen Captcha doğrulamasını yapınız ! <i class="bi bi-x-lg"></i></h5>
                         </div>
                     </div>
                 </div>
             </div>
             <!--Olumsuz-->
-
         }
-     }
+    }
 
 
 
@@ -186,24 +209,34 @@
 
         function codeValidate() {
             var code = document.getElementById("myInput").value;
-            var validationError = document.getElementById("validationError");
-            var validationMessage = ""
+
+            var inputError = document.getElementById("inputError");
+            var inputErrorMessage = "";
             var returnVelue = true;
 
-
             if (code.length <= 0) {
-                validationMessage = "Lütfen belge kodunu giriniz !";
+                inputErrorMessage = "Lütfen belge kodunu giriniz !";
                 returnVelue = false;
             }
             else if (code.length < 12 || code.length > 12) {
-                validationMessage = "Belge kodu 12 karakterdir !";
+                inputErrorMessage = "Belge kodu 12 karakterdir !";
                 returnVelue = false;
             }
-            validationError.textContent = validationMessage;
+
+            var captchaError = document.getElementById("captchaError");
+            var captchaErrorMessage = "";
+
+            var captcharesult = grecaptcha.getResponse();
+
+            if (captcharesult.length == 0) {
+                captchaErrorMessage = "Lütfen Captcha doğrulamasını yapınız !";
+                returnVelue = false;
+            }
+
+            inputError.textContent = inputErrorMessage;
+            captchaError.textContent = captchaErrorMessage;
             return returnVelue;
         }
-
-
 
     </script>
 </body>
